Fix bug on mobile Safari on ipads where <search> element wasn't retaining padding.

--- a/web/themes/custom/uscgov/components/custom/mobile-search/mobile-search.scss
+++ b/web/themes/custom/uscgov/components/custom/mobile-search/mobile-search.scss
@@ -4,6 +4,7 @@
 @use "uswds-core" as *;
 
 .mobile-search__wrapper {
+  display: block; // Necessary on iPad mobile Safari for padding.
   padding: var(--spacing-sm-3) var(--spacing-sm-3) 0 var(--spacing-sm-3);
 
   @media ($desktop_break) {
